  * Version 0.1.7

30-July-2012 - Sam 
  
  * Made compliant with ancient versions of Rack (including Rack used by Rails2)
  * Fixed broken share link 
  * Fixed crashes on startup (in MemoryStore and FileStore)
  * Version 0.1.8
  * Unicode fix 
  * Version 0.1.9

7-August-2012 - Sam

  * Added option to disable profiler for the current session (pp=disable / pp=enable)
  * yajl compatability contributed by Sven Riedel 

10-August-2012 - Sam 

  * Added basic prepared statement profiling for postgres 

20-August-2012 - Sam 
  
  * 1.12.pre 
  * Cap X-MiniProfiler-Ids at 10, otherwise the header can get killed

3-September-2012 - Sam

  * 1.13.pre
  * pg gem prepared statements were not being logged correctly 
  * added setting config.backtrace_ignores = [] - an array of regexes that match on caller lines that get ignored
  * added setting config.backtrace_includes = [] - an array of regexes that get included in the trace by default 
  * cleaned up the way client settings are stored
  * made pp=full-backtrace "sticky"
  * added pp=normal-backtrace to clear the "sticky" state
  * change "pp=sample" to work with "caller" no need for stack trace gem

4-September-2012 - Sam 

  * 1.15.pre
  * fixed annoying bug where client settings were not sticking 
  * fixed long standing issue with Rack::ConditionalGet stopping MiniProfiler from working properly

5-September-2012 - Sam 

  * 1.16
  * fixed long standing problem specs (issue with memory store)
  * fixed issue where profiler would be dumped when you got a 404 in production (and any time rails is bypassed)
  * implemented stacktrace properly

9-September-2012 - Sam

  * 1.17
  * pp=sample was bust unless stacktrace was installed

10-September-2012 - Sam 

  * 1.19
  * fix compat issue with 1.8.7

12-September-2012 - Sam
  
  * 1.20
  * Added pp=profile-gc , it allows you to profile the GC in Ruby 1.9.3

17-September-2012
  * 1.21
  * New MemchacedStore 
  * Rails 4 support