@@ -211,9 +211,19 @@ module Rack
       end
 
       if query_string =~ /pp=profile-gc/
-        return Rack::MiniProfiler::GCProfiler.new.profile_gc(@app, env)
+        # begin
+          if query_string =~ /pp=profile-gc-time/
+            return Rack::MiniProfiler::GCProfiler.new.profile_gc_time(@app, env)
+          else
+            return Rack::MiniProfiler::GCProfiler.new.profile_gc(@app, env)
+          end
+        # rescue => e
+        #   p e
+        #   e.backtrace.each do |s|
+        #     puts s
+        #   end
+        # end
       end
-
       MiniProfiler.create_current(env, @config)
       MiniProfiler.deauthorize_request if @config.authorization_mode == :whitelist
       if query_string =~ /pp=normal-backtrace/
@@ -391,7 +401,8 @@ module Rack
   pp=sample : sample stack traces and return a report isolating heavy usage (experimental works best with the stacktrace gem)
   pp=disable : disable profiling for this session 
   pp=enable : enable profiling for this session (if previously disabled)
-  pp=profile-gc: perform gc profiling on this request (ruby 1.9.3 only)
+  pp=profile-gc: perform gc profiling on this request, analyzes ObjectSpace generated by request (ruby 1.9.3 only)
+  pp=profile-gc-time: perform built-in gc profiling on this request (ruby 1.9.3 only)
 "
     
       client_settings.write!(headers)
